# Akurator

./: .gitignore  .gitmodules  Akurator.jucer  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
Builds/VisualStudio2017/: Akurator.sln  Akurator_App.vcxproj  Akurator_App.vcxproj.filters  Output-Debug.txt  polymorphism_test.xml  resources.rc
Buildscripts/win-x64/: downloadDependencies.bat  downloadDependencies.ps1
Csound/: SF_Play_from_HD_2.csd  akurator_template_12ch.csd  akurator_template_2ch.csd  play_soundfile.csd  reverb_example.csd  turnoff.csd  turnoff_release.csd  vbap.csd  vbap_larger_example.csd  vbap_newopcodes.csd  vbap_spread.csd
JuceLibraryCode/: AppConfig.h  BinaryData.cpp  BinaryData.h  JuceHeader.h
Source/: BlankProject.cpp  BlankProject.h  Main.cpp  MainComponent.cpp  MainComponent.h  MainWindow.h  OscChannelComponent.cpp  OscChannelComponent.h  Storedal.cpp  Storedal.h  sspAddValue.cpp  sspAddValue.h  sspAkuratorApplication.cpp  sspAkuratorApplication.h  sspAnd.cpp  sspAnd.h  sspAudioStream.cpp  sspAudioStream.h  sspBasicValue.cpp  sspBasicValue.h  sspBoolean.cpp  sspBoolean.h  sspChainPlayer.cpp  sspChainPlayer.h  sspChannelMessage.cpp  sspChannelMessage.h  sspCommandIDs.h  sspConcatString.cpp  sspConcatString.h  sspConditionalMsgList.cpp  sspConditionalMsgList.h  sspConditionalPlayer.cpp  sspConditionalPlayer.h  sspConditionalValue.cpp  sspConditionalValue.h  sspConditionals.h  sspDateInterval.cpp  sspDateInterval.h  sspDateMap.cpp  sspDateMap.h  (+152 more)
buildscripts/win-x64/: generateProject.ps1
csound/: attakker.inc  dunder.inc  kulisse.inc
csound/Bekkelaget/: Oppsett Bekkelaget.odt  bekkelaget_20ch.csd  bekkelaget_2ch.csd  bekkelaget_system_test_20ch.csd  bekkelaget_system_test_2ch.csd  bekkelaget_test_20ch.csd  bekkelaget_test_2ch.csd  draape.inc  hall4_konkret.inc  hall_kaskade.inc  hall_konkret.inc  hallene_konkret.inc  kepler.inc  rekke.inc  rens.inc  (+2 more)
src/: CMakeLists.txt
src/access/: CMakeLists.txt  sspLogging.cpp  sspLogging.h  sspWatchDog.h
src/access/midi/: CMakeLists.txt  sspMidiConsole.cpp  sspMidiConsole.h  sspMidiConsoleImpl.cpp  sspMidiConsoleImpl.h  sspMidiDevices.cpp  sspMidiDevices.h  sspMidiSendChannel.cpp  sspMidiSendChannel.h  sspStreamChannel.cpp  sspStreamChannel.h
src/access/osc/: CMakeLists.txt  sspOSCSender.h  sspOscConsole.cpp  sspOscConsole.h  sspOscConsoleImpl.cpp  sspOscConsoleImpl.h  sspOscSendChannel.cpp  sspOscSendChannel.h  sspOscSender.cpp
src/app/: CMakeLists.txt  main.cpp  sspAkuratorApplication.cpp  sspAkuratorApplication.h  sspCommandIDs.h
src/app/components/: MainComponent.cpp  MainComponent.h  MainWindow.cpp  MainWindow.h  sspDomainListboxModel.h  sspDomainPage.cpp  sspRunPage.cpp  sspRunPage.h  sspSettingsPage.cpp  sspSettingsPage.h  sspTabbedComponent.cpp  sspTabbedComponent.h  sspToolbarFactory.cpp  sspToolbarFactory.h
src/domain/: CMakeLists.txt  sspDomainData.cpp  sspDomainData.h
src/domain/core/: CMakeLists.txt  sspDomainElement.h  sspDomainPool.cpp  sspDomainPool.h  sspDomainPrimitives.cpp  sspInput.cpp  sspInput.h  sspPlayTask.cpp  sspPlayTask.h  sspPlayer.cpp  sspPlayer.h  sspSharedVector.h  sspTimeline.cpp  sspTimeline.h
src/domain/elements/: CMakeLists.txt
src/domain/elements/conditionals/: CMakeLists.txt  sspAnd.cpp  sspAnd.h  sspBoolean.h  sspConditionals.cpp  sspDateInterval.cpp  sspDateInterval.h  sspDayOfWeek.cpp  sspDayOfWeek.h  sspIsPlaying.cpp  sspIsPlaying.h  sspMinuteCompare.cpp  sspMinuteCompare.h  sspNot.cpp  sspNot.h  sspOr.cpp  sspOr.h  sspTimeCompare.cpp  sspTimeCompare.h  sspTimeInterval.cpp  sspTimeInterval.h  sspTrigger.cpp  sspTrigger.h  sspValueCompare.cpp  sspValueCompare.h  sspValueInRange.cpp  sspValueInRange.h
src/domain/elements/inputs/: CMakeLists.txt  sspICPanalogInput.cpp  sspICPanalogInput.h  sspICPdigitalInput.cpp  sspICPdigitalInput.h  sspICPinput.cpp  sspICPinput.h  sspInputs.cpp  sspInputs.h
src/domain/elements/messages/: CMakeLists.txt  sspConditionalMsgList.cpp  sspConditionalMsgList.h  sspMessage.cpp  sspMessage.h  sspMessageHandler.h  sspMessageList.h  sspMessageWithReceiver.cpp  sspTimeTriggerMsgList.cpp  sspTimeTriggerMsgList.h  sspTriggerMsgList.cpp  sspTriggerMsgList.h
src/domain/elements/players/: CMakeLists.txt  sspChainPlayer.cpp  sspChainPlayer.h  sspConditionalPlayer.cpp  sspConditionalPlayer.h  sspDistributionPlayer.cpp  sspDistributionPlayer.h  sspIndexPlayer.cpp  sspIndexPlayer.h  sspMidiPlayer.cpp  sspMidiPlayer.h  sspOSCPlayer.cpp  sspOSCPlayer.h  sspPlayers.cpp  sspPlayers.h  sspRandomPlayer.cpp  sspRandomPlayer.h  sspSequentialPlayer.cpp  sspSequentialPlayer.h  sspSilencePlayer.cpp  sspSilencePlayer.h  sspSimultaneousPlayer.cpp  sspSimultaneousPlayer.h
src/domain/elements/streams/: CMakeLists.txt  sspAudioStream.cpp  sspAudioStream.h  sspStream.cpp  sspStream.h
src/domain/elements/strings/: CMakeLists.txt  sspConcatString.cpp  sspConcatString.h  sspConditionalString.cpp  sspConditionalString.h  sspFileString.cpp  sspFileString.h  sspSelectString.cpp  sspSelectString.h  sspSimpleString.h  sspStrings.cpp  sspStrings.h
src/domain/elements/values/: CMakeLists.txt  sspAddValue.cpp  sspAddValue.h  sspBasicValue.h  sspConditionalValue.cpp  sspConditionalValue.h  sspDateMap.cpp  sspDateMap.h  sspLinearMap.cpp  sspLinearMap.h  sspProductValue.cpp  sspProductValue.h  sspRandomValue.cpp  sspRandomValue.h  sspSecondsRun.cpp  sspSecondsRun.h  sspTimeMap.cpp  sspTimeMap.h  sspValueRange.cpp  sspValueRange.h  sspValues.cpp
src/engine/: CMakeLists.txt  sspExecutionState.cpp  sspExecutionState.h  sspExecutiveManager.cpp  sspExecutiveManager.h  sspInputManager.cpp  sspInputManager.h  sspPlayManager.cpp  sspPlayManager.h  sspResetManager.cpp  sspResetManager.h  sspSendChannel.h  sspStreamBus.cpp  sspTimeUpdater.h
src/engine/scheduling/: CMakeLists.txt  sspSchedulePlayTask.cpp  sspSchedulePlayTask.h  sspScheduler.cpp  sspScheduler.h  sspSilenceTask.h  sspTaskQueue.cpp  sspTaskQueue.h
src/projects/: Bekkelaget.cpp  Bekkelaget.h  BlankProject.cpp  BlankProject.h  CMakeLists.txt  HMM.cpp  HMM.h  Storedal.cpp  Storedal.h
(+2 files in other folders)
